--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prebuild": "rm -rf lib",
     "build": "tsc -p tsconfig.build.json",
     "check-compilation": "tsc -p tsconfig.json",
+    "coverage": "nyc yarn test",
     "test": "yarn ts-mocha ./src/__tests__/init.ts \"./src/**/__tests__/**/*.ts\"",
     "test-watch": "yarn test -w",
     "ts-mocha": "mocha --exit -r ts-node/register",
@@ -51,5 +52,8 @@
   "pre-commit": [
     "lint",
     "check-compilation"
-  ]
+  ],
+  "dependencies": {
+    "nyc": "^15.0.0"
+  }
 }
