--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prebuild": "rm -rf lib",
     "build": "tsc -p tsconfig.build.json",
     "check-compilation": "tsc -p tsconfig.json",
-    "coverage": "nyc yarn test",
+    "test-coverage": "nyc --reporter=lcov yarn test",
     "test": "yarn ts-mocha ./src/__tests__/init.ts \"./src/**/__tests__/**/*.ts\"",
     "test-watch": "yarn test -w",
     "ts-mocha": "mocha --exit -r ts-node/register",
@@ -38,6 +38,7 @@
     "@typescript-eslint/parser": "^2.26.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "codecov": "^3.6.5",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-filenames": "^1.3.2",
