--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prebuild": "rm -rf lib",
     "build": "tsc -p tsconfig.build.json",
     "check-compilation": "tsc -p tsconfig.json",
+    "codecov": "codecov",
     "test-coverage": "nyc --reporter=lcov yarn test",
     "test": "yarn ts-mocha ./src/__tests__/init.ts \"./src/**/__tests__/**/*.ts\"",
     "test-watch": "yarn test -w",
