lcov git action

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "prebuild": "rm -rf lib",
     "build": "tsc -p tsconfig.build.json",
     "check-compilation": "tsc -p tsconfig.json",
-    "codecov": "codecov",
-    "test-coverage": "nyc --reporter=lcov yarn test",
+    "codecov": "nyc report --reporter=text-lcov > coverage.lcov",
+    "test-coverage": "nyc yarn test",
     "test": "yarn ts-mocha ./src/__tests__/init.ts \"./src/**/__tests__/**/*.ts\"",
     "test-watch": "yarn test -w",
     "ts-mocha": "mocha --exit -r ts-node/register",
