--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,8 @@ jobs:
     - name: Test
       run: yarn test-coverage
     - name: Upload coverage
-      run: yarn codecov
+        uses: codecov/codecov-action@v1
+        with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+            file: ./coverage.lcov
+            fail_ci_if_error: true
