--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
       run: yarn build
     - name: Test
       run: yarn test-coverage
+    - name: Generage codecov file
+      run: yarn codecov
     - name: Upload coverage
       uses: codecov/codecov-action@v1
       with:
