--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,3 +42,9 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.lcov
         fail_ci_if_error: true
+    - name: NPM Publish
+      id: publish
+      if: github.ref == 'refs/heads/master'
+      uses: JS-DevTools/npm-publish@v1
+      with:
+        token: ${{ secrets.NPM_TOKEN }}
