--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "policy-control",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Policy based access control",
   "author": "cdriscol <drizkol@gmail.com>",
   "license": "MIT",
@@ -9,8 +9,7 @@
   "jsnext:main": "lib/index.es.js",
   "types": "./lib/index.d.ts",
   "engines": {
-    "node": "12",
-    "yarn": "^1.22"
+    "node": ">= 12.x"
   },
   "files": [
     "lib"
